syntax = "proto3";

option csharp_namespace = "MES.Service";
import "google/api/annotations.proto";
package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply){
 option (google.api.http) = {
      post: "/api/greeter/SayHello"
      body: "*"
    };
  };
  rpc Test (HelloRequest) returns (HelloReply){
  option (google.api.http) = {
      post: "/api/greeter/Test"
      body: "*"
    };
  };
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  string password=2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  bool  success=2;
}